[project]
name = "users-subgraph"
version = "1.0.0"
readme = "README.md"

requires-python = ">=3.14"
dependencies = [
    "cachetools>=5.5.2",
    "fastapi==0.135.2",
    "phonenumbers==9.0.26",
    "pydantic>=2.12.5,<3.0.0",
    "pymongo==4.16.0",
    "python-ldap==3.4.5",
    "strawberry-graphql[cli]==0.312.2",
    "typing-extensions>=4.15.0",
    "uvicorn==0.42.0",
]

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.lint]
# line too long, unsorted imports, unused imports
extend-select = ["E501", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
